# DE32-3nd-team1

./: Dockerfile  README.md  pyproject.toml
airflow/: .Dockerfile.swp  Dockerfile  pyproject.toml  requirements.txt
airflow/src/airflow/dags/: .amount.py.swp  amount.py  dag_model.py  model.py  pyspark_receipt.py
b_fastapi/: .Dockerfile.swp  Dockerfile  pyproject.toml  requirements.txt
b_fastapi/src/b_fastapi/: main.py
dags/: Dockerfile  docker-compose.yml  pyproject.toml  receipt.py  requirements.txt
dags/model/: donut.py
f_streamlit/: Dockerfile  README.md  pyproject.toml  requirements.txt
f_streamlit/src/f_streamlit/: .st_module.py.swp  app.py  st_module.py  user_page.py
f_streamlit/src/f_streamlit/pages/: @1  admin_page.py  page_1.py  page_2.py  silder.py  table.py  user_page.py
fastapi/: pyproject.toml
fastapi/src/fastapi/: main.py
model/: donut.py
py/: Dockerfile  amount.py
spark/: Dockerfile
spark/dags/: pyspark_receipt.py
spark/py/: amount.py
streamlit/: @  Dockerfile  pyproject.toml  requirements.txt  ~1
streamlit/src/streamlit/: app.py  st_module.py
streamlit/src/streamlit/pages/: page_1.py  page_2.py
tmp/: Dockerfile  app.py
tmp/airflow_docker/: docker-compose.yaml
