[project]
name = "f_streamlit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kim", email = "lsiwh32749@gmail.com"},
]
dependencies = [
    "streamlit>=1.38.0",
    "matplotlib>=3.9.2",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "py-postgresql>=1.3.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
